# ctenv

./: .ctenv.toml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.dev  Makefile  NOTICE  README.md  changelog.md  ctenv.py  plan-reference-implementation.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: publish.yml  test.yml
backlog/: config.yml
backlog/archive/: task-30 - Bundle-gosu-binaries-in-Python-package.md  task-32 - Add-tilde-expansion-support-for-volume-paths.md  task-35 - Refactor-ctenv-to-support-both-single-file-execution-and-package-installation-with-bundled-gosu-binaries.md
backlog/tasks/: task-1 - Set-up-basic-Click-CLI-structure-with-run-command.md  task-10 - Implement-start-command-(detached-container).md  task-11 - Implement-stop-command-(stop-and-remove-container).md  task-12 - Implement-status-command-(check-container-status).md  task-13 - Add-support-for-Podman-runtime-via-RUNNER-environment-variable.md  task-14 - Add-verbose-debug-output-throughout-all-commands.md  task-15 - Add-container-name-customization-and-networking-options.md  task-16 - Implement-configuration-file-support-with-git-style-discovery.md  task-16 - Implement-configuration-file-support.md  task-17 - Add-shell-completion-and-improved-CLI-experience.md  task-19 - Improve-gosu-binary-discovery-with-PATH-fallback.md  task-2 - Implement-Config-class-for-user-identity-and-basic-defaults.md  task-20 - Implement-configuration-contexts-for-different-settings.md  task-21 - Implement-'default'-context-as-the-implicit-context-when-none-specified.md  task-23 - Add-variable-templating-support-for-contexts.md  task-24 - Add-volume-chown-option-support.md  task-25 - Add-entrypoint-commands-support.md  task-26 - Add-ulimit-configuration-support.md  task-27 - Add-setup-command-for-gosu-installation.md  task-28 - Fix-security-vulnerabilities-in-command-execution-and-downloads.md  task-29 - Add-container-platform-support-(linux-amd64,-linux-arm64).md  task-29 - Add-support-for-[defaults]-section-in-configuration-files.md  task-3 - Create-ContainerRunner-class-with-Docker-support.md  task-30 - Bundle-gosu-binaries-in-Python-package.md  task-31 - Add-support-for-custom-Docker-arguments.md  (+19 more)
ctenv/: __init__.py  __main__.py  cli.py  config.py  container.py  ctenv.py  image.py  version.py
scripts/: lima.sh  lima.yaml  lima2.yaml
tests/: conftest.py  test_build.py  test_cli_integration.py  test_cli_parsing.py  test_config.py  test_container_coverage.py  test_ctenv.py  test_error_handling.py  test_integration.py  test_mocks.py  test_security.py  test_setup_security.py  test_unknown_config.py  test_workspace_integration.py
tests-e2e/: README.md
(+53 files in other folders)
