[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[project]
name = "ctenv"
version = "0.1"
description = "ctenv is a tool for running a program in a container as current user"
readme = "README.md"
authors = [{name = "Oskar Skoog", email = "oskar@osd.se"}]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/osks/ctenv"
Changelog = "https://github.com/osks/ctenv/releases"
Issues = "https://github.com/osks/ctenv/issues"
CI = "https://github.com/osks/ctenv/actions"

[project.scripts]
ctenv = "ctenv.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
