[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[project]
name = "ctenv"
description = "ctenv is a tool for running a program in a container as current user"
readme = "README.md"
authors = [{name = "Oskar Skoog", email = "oskar@osd.se"}]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "click",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/osks/ctenv"
Changelog = "https://github.com/osks/ctenv/releases"
Issues = "https://github.com/osks/ctenv/issues"
CI = "https://github.com/osks/ctenv/actions"

[project.scripts]
ctenv = "ctenv:cli"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock", 
    "pytest-cov",
    "ruff",
]

[tool.setuptools.dynamic]
version = {attr = "ctenv.__version__"}
